third_party/rust/cstr/tests/compile_fail/interior-nul.rs
use cstr::cstr;

fn main() {
    let _foo = cstr!("foo\0bar");
}
