third_party/rust/cstr/tests/compile_fail/interior-nul.stderr
error: nul byte found in the literal
 --> $DIR/interior-nul.rs:4:22
  |
4 |     let _foo = cstr!("foo\0bar");
  |                      ^^^^^^^^^^
